Update more deprecations.